Instalación de Phpunit y Behat para tests Reestructuracion de src/ para tener distintos BC BC Shared para elementos comunes Openapi Documentation con Nelmio Sistema de Eventos sencillo en Shared

--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,17 @@
         "php": ">=8.4.10",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "nelmio/api-doc-bundle": "*",
         "runtime/frankenphp-symfony": "^0.2.0",
+        "symfony/asset": "7.3.*",
+        "symfony/browser-kit": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
         "symfony/runtime": "7.3.*",
+        "symfony/twig-bundle": "7.3.*",
+        "symfony/uid": "7.3.*",
         "symfony/yaml": "7.3.*"
     },
     "config": {
@@ -67,5 +72,11 @@
             "require": "7.3.*",
             "docker": true
         }
+    },
+    "require-dev": {
+        "behat/behat": "^3.23",
+        "friends-of-behat/symfony-extension": "^2.6",
+        "phpunit/phpunit": "^12.2",
+        "symfony/css-selector": "7.3.*"
     }
 }
