--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,6 @@
-controllers:
+shared-api:
     resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+        path: ../src/Shared/Infrastructure/UI/Api/
+        namespace: App\Shared\Infrastructure\UI\Api
     type: attribute
+    prefix: '/api'
