--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -8,6 +8,7 @@ default:
             contexts:
                 - App\Tests\Acceptance\Shared\ApiContext
                 - App\Tests\Acceptance\Shared\SystemContext
+                - App\Tests\Acceptance\Shopping\ShoppingContext
 
     extensions:
         FriendsOfBehat\SymfonyExtension: 
