--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,13 @@
         "php": ">=8.4.10",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.15",
+        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/orm": "^3.5",
         "nelmio/api-doc-bundle": "*",
+        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpstan/phpdoc-parser": "^2.2",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/asset": "7.3.*",
         "symfony/browser-kit": "7.3.*",
@@ -17,7 +23,10 @@
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/property-access": "7.3.*",
+        "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
+        "symfony/serializer": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
         "symfony/uid": "7.3.*",
         "symfony/yaml": "7.3.*"
@@ -77,6 +86,7 @@
         "behat/behat": "^3.23",
         "friends-of-behat/symfony-extension": "^2.6",
         "phpunit/phpunit": "^12.2",
-        "symfony/css-selector": "7.3.*"
+        "symfony/css-selector": "7.3.*",
+        "symfony/maker-bundle": "^1.64"
     }
 }
